--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -25,6 +25,9 @@
     "mikestead.dotenv",
     "christian-kohler.npm-intellisense",
     "christian-kohler.path-intellisense",
-    "miclo.sort-typescript-imports"
+    // "miclo.sort-typescript-imports", // conflict with 'use client'
+    "naumovs.color-highlight",
+    "SimonSiefke.svg-preview",
+    "pomdtr.excalidraw-editor"
   ]
 }
