05-0: setup neon postgresql and prisma

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -28,6 +28,7 @@
     // "miclo.sort-typescript-imports", // conflict with 'use client'
     "naumovs.color-highlight",
     "SimonSiefke.svg-preview",
-    "pomdtr.excalidraw-editor"
+    "pomdtr.excalidraw-editor",
+    "Prisma.prisma"
   ]
 }
