--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -17,7 +17,8 @@
   "explorer.fileNesting.enabled": true,
   "explorer.fileNesting.expand": false,
   "explorer.fileNesting.patterns": {
-    "next.config.mjs": "components.json, .gitignore, postcss.config.mjs, .prettierrc.json, tailwind.config.ts, tsconfig.json, .eslintrc.json, next-env.d.ts"
+    "next.config.mjs": "components.json, .gitignore, postcss.config.mjs, .prettierrc.json, tailwind.config.ts, tsconfig.json, .eslintrc.json, next-env.d.ts",
+    ".env": ".env.local, .env.production"
   },
 
   "workbench.iconTheme": "material-icon-theme",
