--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbo",
     "build": "next build",
     "start": "next start",
     "prettier-check": "prettier --check .",
@@ -32,6 +32,7 @@
     "prisma": "^5.13.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-dom-confetti": "^0.2.0",
     "react-dropzone": "^14.2.3",
     "react-rnd": "^10.4.10",
     "sharp": "0.32.6",
