06-4: feat: when checkout trigger LoginModal

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,7 +2,7 @@
   "editor.defaultFormatter": "esbenp.prettier-vscode",
   "editor.formatOnSave": true,
   "editor.codeActionsOnSave": {
-    "source.organizeImports": "always", // auto sort import on save
+    // "source.organizeImports": "always", // auto sort import on save !!strange order!!
     "source.fixAll.eslint": "always",
     "source.addMissingImports": "always" // may not be good, as import the wrong modules
   },
